# actix_yew

./: README.md  ref.md
actix_api/: Cargo.toml  actix_yew.db
actix_api/src/: controllers.rs  main.rs  models.rs  types.rs  utils.rs
actix_api/src/controllers/: post.rs
actix_api/src/models/: post.rs
actix_api/src/utils/: errors.rs
yew_ui/: Cargo.toml  index.html
yew_ui/src/: components.rs  main.rs  types.rs  utils.rs
yew_ui/src/components/: app.rs  post_detail.rs  post_list.rs  text.rs
yew_ui/src/subs/: mod.rs  parse_markdown.rs
yew_ui/src/types/: post.rs
yew_ui/src/utils/: parse_markdown.rs
yew_ui/styles/: edit.css
