[package]
name = "actix_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.2.0"
actix-web = "3.3.2"
env_logger = "0.10.0"
r2d2 = "0.8.9"
r2d2_sqlite = "0.18.0"
rusqlite = { version = "0.25.3", features=["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.25"
