[package]
name = "yew_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"]}
gloo-net = "0.2"
gloo-console = "0.2"
pulldown-cmark = { version = "0.9.2", default-features = false }
serde = { version = "1.0", features = ["derive"] }
log = "0.4.6"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2.70"
wasm-logger = "0.2.0"
web-sys = "0.3"
